# python-gsmmodem

./: .flake8  .pre-commit-config.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yaml
gsmmodem/: modem.py  serial_comms.py
