[metadata]
name = python-gsmmodem-new
description = Control an attached GSM modem: send/receive SMS messages, handle calls, etc
license = LGPLv3+
author = Francois Aucamp
author_email = francois.aucamp@gmail.com
url = https://github.com/babca/python-gsmmodem
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Communications :: Telephony
    Topic :: Home Automation
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware
    Topic :: Terminals :: Serial
    Topic :: Utilities
keywords =
    gsm
    sms
    modem
    mobile
    phone
    usb
    serial

[options]
packages =
    gsmmodem
    gsmtermlib
package_dir = gsmtermlib=tools/gsmtermlib
scripts =
    tools/gsmterm.py
    tools/sendsms.py
    tools/identify-modem.py
install_requires = pyserial>=3.1.1
tests_require =

[options.extras_require]
docs = sphinx
